--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "ember-cli-babel": "^7.1.2",
     "ember-firebase-service": "^6.0.0",
-    "ember-simple-auth": "^1.8.0",
+    "ember-simple-auth": "git+https://github.com/alexmasita/ember-simple-auth.git",
     "fastboot-transform": "^0.1.3",
     "mock-cloud-firestore": "^0.9.2"
   },
